# dataerrorprop

./: LICENSE  README.md  derivations.md  histogram_diagram.py  pyproject.toml  test_script.py
src/dataerrorprop/: errorprop.py  errorweight.py  standard.py  weighted.py
